visit-counter/visit-counter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visit-counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visit-counter
  template:
    metadata:
      labels:
        app: visit-counter
    spec:
      containers:
        - name: visit-counter
          image: ematos/visit-counter:1.0
