visit-counter/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-for-visit-counter
  ports:
    - port: 9000
      targetPort: 6379
