visit-counter/visit-counter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visit-counter-service
spec:
  selector:
    app: visit-counter
  ports:
    - port: 3000
      targetPort: 8000
